<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.choo.moviefinder"
            android:targetClass="com.choo.moviefinder.MainActivity"
            android:data="moviefinder://search" />
    </shortcut>
    <shortcut
        android:shortcutId="favorite"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favorite"
        android:shortcutShortLabel="@string/shortcut_favorite_short"
        android:shortcutLongLabel="@string/shortcut_favorite_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.choo.moviefinder"
            android:targetClass="com.choo.moviefinder.MainActivity"
            android:data="moviefinder://favorite" />
    </shortcut>
</shortcuts>
