<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl">

    <ImageView
        android:layout_width="@dimen/icon_size_error"
        android:layout_height="@dimen/icon_size_error"
        android:contentDescription="@string/cd_error_icon"
        android:src="@drawable/ic_cloud_off"
        app:tint="?attr/colorOnSurface"
        android:alpha="0.5" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:gravity="center"
        android:text="@string/error_network"
        android:textAppearance="?attr/textAppearanceBody1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/retry" />

</LinearLayout>
