<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.choo.moviefinder.presentation.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.choo.moviefinder.presentation.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_detail"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_search_to_person_detail"
            app:destination="@id/personDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.choo.moviefinder.presentation.favorite.FavoriteFragment"
        android:label="@string/nav_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.choo.moviefinder.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_stats"
            app:destination="@id/statsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.choo.moviefinder.presentation.stats.StatsFragment"
        android:label="@string/stats_title"
        tools:layout="@layout/fragment_stats">
        <deepLink app:uri="moviefinder://stats" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.choo.moviefinder.presentation.detail.DetailFragment"
        android:label=""
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
        <deepLink app:uri="moviefinder://movie/{movieId}" />
        <action
            android:id="@+id/action_detailFragment_self"
            app:destination="@id/detailFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_detailFragment_to_personDetailFragment"
            app:destination="@id/personDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/personDetailFragment"
        android:name="com.choo.moviefinder.presentation.person.PersonDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_person_detail">
        <argument
            android:name="personId"
            app:argType="integer" />
        <deepLink app:uri="moviefinder://person/{personId}" />
        <action
            android:id="@+id/action_personDetailFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

</navigation>
